FAQ background to accordian transparent

--- a/faq.html
+++ b/faq.html
@@ -97,7 +97,7 @@
                 <!-- accordian -->
                 <div id="accordionFAQ">
                     <!-- first accordian tab -->
-                    <div class="card">
+                    <div class="card bg-transparent">
                         <div role="tab" class="card-header">
                             <!-- tab heading -->
                             <h4 id="FAQHeaders">
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <!-- second accordian tab -->
-                    <div class="card">
+                    <div class="card bg-transparent">
                         <div role="tab" class="card-header">
                             <h4 id="FAQHeaders">
                                 <a class="collapsed" data-toggle="collapse" data-target="#itemsFAQ">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <!-- third accordian tab -->
-                    <div class="card">
+                    <div class="card bg-transparent">
                         <div role="tab" class="card-header">
                             <h4 id="FAQHeaders">
                                 <a class="collapsed" data-toggle="collapse" data-target="#giftFAQ">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <!-- fourth accordian tab -->
-                    <div class="card">
+                    <div class="card bg-transparent">
                         <div role="tab" class="card-header">
                             <h4 id="FAQHeaders">
                                 <a class="collapsed" data-toggle="collapse" data-target="#damageFAQ">
