add margin to store cards

--- a/store.html
+++ b/store.html
@@ -22,10 +22,6 @@
 </head>
 <body id="storeBody">
     
-    <header>
-
-    </header>
-
 <!-- navbar -->
 <nav class="navbar navbar-expand-md bg-transparent navbar-light ">
     <!-- navbar toggler -->
@@ -102,7 +98,7 @@
 
 <div class="container pt-3">
     <div class="row">
-        <div class="col-md-4 ">
+        <div class="col-md-4 mb-3">
             <div class="card text-center border-muted bg-white">
                 <img class="card-img-top img-fluid pt-3 px-3" src="/img/boxcontent3.jpg" alt="box contents 1">
                 <div class="card-body">
@@ -121,7 +117,7 @@
                 </div>
               </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-3">
             <div class="card text-center bg-white">
                 <img class="card-img-top img-fluid pt-3 px-3" src="/img/boxcontent3.jpg" alt="box contents 2">
                 <div class="card-body">
@@ -140,13 +136,12 @@
                 </div>
               </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-3">
             <div class="card text-center bg-white">
                 <img class="card-img-top img-fluid pt-3 px-3" src="/img/boxcontent3.jpg" alt="box contents 3">
                 <div class="card-body">
                     <h6 class="card-title text-muted">&hearts;Best Value!</h6>
                     <h5 class="card-title">6 Month Prepay</h5>
-                  <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
                     <p class="card-text">
                         $36 per box!
                         <ul class="text-left">
