disable get strated button and add page title

--- a/store.html
+++ b/store.html
@@ -55,7 +55,7 @@
           </ul>
         </div>
     <!-- get started button -->
-        <a id="getStartedBtn" href="#" class="btn block-btn btn-large navbar-btn" role="button">GET STARTED</a>
+        <a id="getStartedBtn" href="#" class="btn block-btn btn-large navbar-btn disabled" role="button" aria-disabled="true">GET STARTED</a>
       </nav>
     <!-- navbar end -->
 
@@ -97,6 +97,12 @@
 <!-- modal pop-up for login end -->
 
 <div class="container pt-3">
+    <div class="row">
+        <div class="col">
+            <h3>Box Subscription</h3>
+            <hr>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-4 mb-3">
             <div class="card text-center border-muted bg-white">
