--- a/footer.html
+++ b/footer.html
@@ -25,13 +25,16 @@
     <footer class="footer bg-white">
         <div class="container mt-5" id="footerCard">
             <div class="row justify-content-center">
-                <div class="col-auto mt-5">
+                <div class="col mt-5 text-center">
+                    <img id="footerLogo" class="" src="/img/logo.png" alt="logo">
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-auto">
                     <div class="card text-center border-0 mx-auto" style="width: 400px;">
                         <div class="card-body">
                             <div class="card-title headerText">Get our emails</div>
                             <form action="">
-                                <img id="footerLogo" class="" src="/img/logo.png" alt="logo">
-                                <img id="hashtagLogo" class="" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag">
                                 <div class="input-group">
                                     <input type="text" class="form-control bg-light mr-1 w-20 footerRelative" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
@@ -49,9 +52,14 @@
                 <div class="col-auto"><a href="/store.html" class="footerLinks">Get Started</a></div>
                 <div class="col-auto"><a href="/faq.html" class="footerLinks">FAQ</a></div>
                 <div class="col-auto"><a href="/howitworks.html" class="footerLinks">How It Works</a></div>
-                <!-- <div class="col-auto"><a href="/boxdescription.html" class="footerLinks">What's in the Box</a></div> -->
+                <div class="col-auto"><a href="/boxdescription.html" class="footerLinks">What's in the Box</a></div>
             </div>
-            <div class="row justify-content-center mt-4">
+            <div class="row">
+                <div class="col text-center my-3">
+                    <img id="hashtagLogo" class="" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag">
+                </div>
+            </div>
+            <div class="row justify-content-center">
                 <div class="col-auto" id="footerIcons">
                     <a href="https://www.facebook.com/" class="fab fa-facebook-square footerSocial"></a>
                     <a href="https://mail.google.com/" class="fa fa-envelope footerSocial"></a>
