add links to footer images

--- a/footer.html
+++ b/footer.html
@@ -26,14 +26,14 @@
         <div class="container mt-5" id="footerCard">
             <div class="row justify-content-center">
                 <div class="col mt-5 text-center">
-                    <img id="footerLogo" class="" src="/img/logo.png" alt="logo">
+                    <a href="/homepage.html"><img id="footerLogo" class="" src="/img/logo.png" alt="logo"></a>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
                     <div class="card text-center border-0 mx-auto" style="width: 400px;">
                         <div class="card-body">
-                            <div class="card-title headerText">Get our emails</div>
+                            <div class="card-title headerText">Get our emails:</div>
                             <form action="">
                                 <div class="input-group">
                                     <input type="text" class="form-control bg-light mr-1 w-20 footerRelative" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
@@ -56,7 +56,7 @@
             </div>
             <div class="row">
                 <div class="col text-center my-3">
-                    <img id="hashtagLogo" class="" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag">
+                    <a href="https://www.instagram.com/"><img id="hashtagLogo" class="" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag"></a>
                 </div>
             </div>
             <div class="row justify-content-center">
