--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -170,7 +170,7 @@
             </div>
             </form>
         <div class="col-12 col-md-6 pl-4">
-            <form class="border p-4" action="">
+            <form class="border p-4 mb-5" action="">
                 <div class="form-title text-center">
                 <h4>Check Out As A Guest</h4>
             <hr>
@@ -236,13 +236,9 @@
         </div>
         </div>
     </div>
-<hr>
+<!-- <hr> -->
 </div>
 
-    
-    <footer>
-
-    </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
