add footer and small card background to howitworks.html

--- a/howitworks.html
+++ b/howitworks.html
@@ -105,7 +105,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <p class="text-center">Encouragement, comfort, celebration, and support through uplifting gifts to help you through your journey of self-love and mental health</p>
+            <p class="text-center bg-midtrans">Encouragement, comfort, celebration, and support through uplifting gifts to help you through your journey of self-love and mental health</p>
         </div>
     </div>
     <div class="row">
@@ -115,7 +115,7 @@
                     1
                 </div>
                 <img class="card-img-top rounded-circle img-fluid" src="/img/girlpourwaterflowers.jpg" alt="girl pouring water on head to grow herself">
-                <div class="card-body">
+                <div class="card-body bg-midtrans">
                   <h5 class="card-title">Choose Your Box</h5>
                   <p class="card-text">Choose from our monthly plan with a 1 month, 3 month, or 6 month duration, or choose a one-time gift. Cancel Anytime</p>
                 </div>
@@ -127,7 +127,7 @@
                     2
                 </div>
                 <img class="card-img-top rounded-circle img-fluid" src="/img/headlesshugselflove.png" alt="hugging self love">
-                <div class="card-body">
+                <div class="card-body bg-midtrans">
                   <h5 class="card-title">Recieve Your Monthly Box</h5>
                   <p class="card-text">Choose from our monthly plan with a 1 month, 3 month, or 6 month duration, or choose a one-time gift. Cancel Anytime</p>
                 </div>
@@ -139,7 +139,7 @@
                     3
                 </div>
                 <img class="card-img-top rounded-circle img-fluid" src="/img/girlinflowerring.jpg" alt="girl happy inside flowers">
-                <div class="card-body">
+                <div class="card-body bg-midtrans">
                   <h5 class="card-title">Enjoy Your Progress</h5>
                   <p class="card-text">Choose from our monthly plan with a 1 month, 3 month, or 6 month duration, or choose a one-time gift. Cancel Anytime</p>
                 </div>
@@ -148,7 +148,53 @@
     </div>
 </div>
 
-
+<footer class="footer bg-white">
+    <div class="container mt-5" id="footerCard">
+        <div class="row justify-content-center">
+            <div class="col mt-5 text-center">
+                <a href="/homepage.html"><img id="footerLogo" class="" src="/img/logo.png" alt="logo"></a>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <div class="card text-center border-0 mx-auto" style="width: 400px;">
+                    <div class="card-body">
+                        <div class="card-title headerText">Get our emails:</div>
+                        <form action="">
+                            <div class="input-group">
+                                <input type="text" class="form-control bg-light mr-1 w-20 footerRelative" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                <div class="input-group-append">
+                                    <button class="btn myDarkBtn" type="button">Submit</button>
+                                </div>
+                            </div>
+                            <small id="emailJoin" class="form-text text-muted font-italic mt-2">Join our newsletter for the latest offers, sneak peeks, giveaways & more!</small>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center mt-3">
+            <div class="col-auto"><a href="/homepage.html" class="footerLinks">Home</a></div>
+            <div class="col-auto"><a href="/store.html" class="footerLinks">Get Started</a></div>
+            <div class="col-auto"><a href="/faq.html" class="footerLinks">FAQ</a></div>
+            <div class="col-auto"><a href="/howitworks.html" class="footerLinks">How It Works</a></div>
+            <div class="col-auto"><a href="/boxdescription.html" class="footerLinks">What's in the Box</a></div>
+        </div>
+        <div class="row">
+            <div class="col text-center my-3">
+                <a href="https://www.instagram.com/"><img id="hashtagLogo" class="" src="/img/HowAreYouReallyHastag.png" alt="how are you really Hastag"></a>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-auto" id="footerIcons">
+                <a href="https://www.facebook.com/" class="fab fa-facebook-square footerSocial"></a>
+                <a href="https://mail.google.com/" class="fa fa-envelope footerSocial"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter footerSocial"></a>
+                <a href="https://www.instagram.com/" class="fab fa-instagram footerSocial"></a>
+            </div>
+        </div>
+    </div>
+</footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
