add border div in between footer and page

--- a/homepage.html
+++ b/homepage.html
@@ -116,6 +116,9 @@
         <div class="col-12 col-md-6 text-center p-2 ">
             <img id="womanHome" src="/img/Self-Love-transparent.png" alt=""></div>
     </div>
+    <div class="row mb-5">
+        <div class="col mb-5"></div>
+    </div>
 </div>
 
 <footer class="footer bg-white">
