--- a/boxdescription.html
+++ b/boxdescription.html
@@ -168,12 +168,12 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <div class="card text-center border-0 mx-auto" style="width: 400px;">
+                    <div class="card text-center border-0 mx-auto">
                         <div class="card-body">
                             <div class="card-title headerText">Get our emails:</div>
                             <form action="">
                                 <div class="input-group">
-                                    <input type="text" class="form-control bg-light mr-1 w-20 footerRelative" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                    <input type="text" class="form-control bg-light mr-1 w-20" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
                                         <button class="btn myDarkBtn" type="button">Submit</button>
                                     </div>
@@ -205,7 +205,7 @@
                 </div>
             </div>
         </div>
-    </footer>>
+    </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
